--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
+    "react-icons": "^4.7.1",
+    "react-parallax-tilt": "^1.7.89",
+    "react-pdf": "^6.2.2",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
