--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-parallax-tilt": "^1.7.89",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.3.2",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
