updated animations with framer-animation

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.4.0",
     "react-icons": "^4.7.1",
-    "react-parallax-tilt": "^1.7.89",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.6.2",
     "react-scroll-parallax": "^3.3.2",
